Deploy the hot version

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1> Welcome to Fateh Website </h1>
+    <h2> Welcome to Fateh Website </h2>
+    <h3> Welcome to Fateh Website </h3>
 </body>
 </html>
