--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1> Welcome to Fateh Website </h1>
     <h2> Welcome to Fateh Website </h2>
     <h3> Welcome to Fateh Website </h3>
+    
+    <script src="app.js"></script>
 </body>
 </html>
