--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2> Welcome to Fateh Website </h2>
     <h3> Welcome to Fateh Website </h3>
     
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="app.js"></script>
+    
 </body>
 </html>
