--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,9 @@
     <label>Email <input type="email" name="email" /></label>
   </p>
   <p>
+    <label>Texte <input type="text" name="text" /></label>
+  </p>
+  <p>
     <button type="submit">Send</button>
   </p>
 </form>
